# VisionSystemCPP

./: .gitignore  Build_Demo_Installer.bat  Build_Runtime_Package.bat  CMakeLists.txt  CMakePresets.json  Flusso programmazione.txt  INSTALLAZIONE_ALTRO_PC.txt  NOTA_DISCO_D.md  PROMEMORIA_DOMANI.md  README.md  TODO.md  TODO_ASYNC_REFACTOR.md  VisionAI_CPU.bat  bug rifiniture.txt  deploy_release.ps1  gui_tecnologia.txt  roadmap_vision_system.txt  usa_disco_d.ps1  usa_disco_e.ps1  vcpkg.json
.codex_merge/: local-uncommitted-before-merge.patch  merge-notes.md
calibrations/: CAM01_checkerboard.json  CAM02_checkerboard.json  CAM03_checkerboard.json  CAM04_checkerboard.json  CAM05_checkerboard.json  CAM06_checkerboard.json  CAM07_checkerboard.json  CAM08_checkerboard.json  CAM09_checkerboard.json  CAM10_checkerboard.json  CAM11_checkerboard.json  CAM12_checkerboard.json  CAM13_checkerboard.json  CAM14_checkerboard.json  CAM15_checkerboard.json  CAM16_checkerboard.json
cmake/: AppVersion.cmake  BumpAppVersion.cmake
config/: app_settings.json  camera_profiles.json  cameras.json
docs/: helper_manual.md  programmer_manual.md  source_file_map.md
docs/archive/: camera_sdk_vimba.txt  gui_layout.txt  note_tecniche_vision_system.txt  roadmap_vision_system.txt
experiments/auto_geometry_assistant/: APPUNTI.md  README.md  sample_request.json  server.py
ollama/vision-help/: Modelfile  README.md  install_vision_help.bat  vision_help_dataset.jsonl
recipes/default/: recipe.json
recipes/dentarello/: recipe.json
recipes/piastra_con_fori/: recipe.json
recipes/rettangolo_asimmetrico/: recipe.json
recipes/rettangolo_con_fori_19201080/: recipe.json
recipes/rettangolo_hr/: recipe.json
recipes/stress_test/: recipe.json
recipes/test/: recipe.json
recipes/test_cross/: recipe.json
recipes/test_cross_modello/: recipe.json
recipes/test_cross_template/: recipe.json
recipes/test_ricerca/: recipe.json
recipes/test_usb/: recipe.json
resources/: icons.qrc
scripts/cmake/: SeedRuntimeConfig.cmake
scripts/runtime/: Build-DemoInstaller.ps1  Build-RuntimePackage.ps1  Install-Runtime.ps1  Validate-RuntimePackage.ps1
src/: main.cpp
src/access/: AccessPolicy.cpp  AccessPolicy.h  AccessRecipe.cpp  AccessRecipe.h  AccessSession.cpp  AccessSession.h  AccessTypes.cpp  AccessTypes.h
src/ai/: AiMaskLabelStorage.cpp  AiMaskLabelStorage.h
src/app/: AppVersion.cpp  AppVersion.h
src/calibration/: CalibrationPatternDetector.cpp  CalibrationPatternDetector.h  CalibrationRecipe.cpp  CalibrationRecipe.h  CalibrationSession.cpp  CalibrationSession.h  CalibrationSolver.cpp  CalibrationSolver.h  CalibrationTypes.h  ImageCalibrationMap.cpp  ImageCalibrationMap.h  PlanarCalibrationEstimator.cpp  PlanarCalibrationEstimator.h
src/camera/: CameraDeviceInfo.h  CameraFactory.cpp  CameraFactory.h  CameraProfileCatalog.cpp  CameraProfileCatalog.h  FileCamera.cpp  FileCamera.h  ICamera.h  SimulatedCamera.cpp  SimulatedCamera.h  UsbCamera.cpp  UsbCamera.h  UsbCameraDiscovery.cpp  UsbCameraDiscovery.h  VimbaCamera.cpp  VimbaCamera.h  VimbaTriggerController.cpp  VimbaTriggerController.h  VimbaXDiscovery.cpp  VimbaXDiscovery.h
src/config/: AppConfig.cpp  AppConfig.h  GeometryRecipeJson.cpp  GeometryRecipeJson.h  RecipeDeletion.cpp  RecipeDeletion.h  RecipeJsonUtils.cpp  RecipeJsonUtils.h  RecipeManager.cpp  RecipeManager.h  RecipeManagerAI.cpp  RecipeManagerAcquisition.cpp  RecipeManagerGeometry.cpp  RecipeManagerMeasurement.cpp  RecipeManagerStorage.cpp  RecipeManagerSurfaceDefect.cpp  RecipeManagerSurfaceLocalization.cpp  RecipeManagerThreadInspection.cpp  TranslationManager.cpp  TranslationManager.h
src/geometry/: ArcGeometry.cpp  ArcGeometry.h  CircleGeometry.cpp  CircleGeometry.h  ConstructedGeometry.cpp  ConstructedGeometry.h  ConstructedGeometryMath.cpp  ConstructedGeometryMath.h  ContourGeometry.cpp  ContourGeometry.h  EdgeGeometry.cpp  EdgeGeometry.h  GeometryCommon.h  GeometrySet.cpp  GeometrySet.h  LineGeometry.cpp  LineGeometry.h  PointGeometry.cpp  PointGeometry.h
src/gui/: CameraAssignmentDialog.cpp  CameraAssignmentDialog.h  CameraSetupPanelWidget.cpp  CameraSetupPanelWidget.h  CameraStripWidget.cpp  CameraStripWidget.h  CameraTileWidget.cpp  CameraTileWidget.h  CheckerboardCalibrationDialog.cpp  CheckerboardCalibrationDialog.h  CommandToolbarWidget.cpp  CommandToolbarWidget.h  IconCatalog.cpp  IconCatalog.h  ImagePrimitives.h  ImageViewWidget.cpp  ImageViewWidget.h  ImageViewWidgetGeometry.cpp  ImageViewWidgetInteraction.cpp  ImageViewWidgetInteractionRelease.cpp  ImageViewWidgetPainting.cpp  ImageViewWidgetPolygon.cpp  ImageViewWidgetState.cpp  MainWindow.cpp  MainWindow.h  MainWindowCameraConfig.cpp  MainWindowGeometry.cpp  MainWindowGeometryPanels.cpp  MainWindowGeometryRecipe.cpp  MainWindowGeometryRuntime.cpp  MainWindowHelp.cpp  MainWindowImageHandlers.cpp  MainWindowImaging.cpp  MainWindowInteractions.cpp  MainWindowMenu.cpp  MainWindowPanels.cpp  MainWindowRecipes.cpp  MainWindowSetup.cpp  MainWindowStyle.cpp  MainWindowSurface.cpp  (+22 more)
src/measurement/: MeasurementGeometry.h  MeasurementGeometryMath.cpp  MeasurementGeometryMath.h  MeasurementToleranceEvaluator.cpp  MeasurementToleranceEvaluator.h  MeasurementUnitConverter.cpp  MeasurementUnitConverter.h  RealMeasurementTypes.h
src/processing/: CircleFit.cpp  CircleFit.h  GeometryMeasurementPipeline.cpp  GeometryMeasurementPipeline.h  ImageProcessor.cpp  ImageProcessor.h  LocalizationProcessor.cpp  LocalizationProcessor.h  MaskPoseEstimator.cpp  MaskPoseEstimator.h  ShapeCandidateFilter.cpp  ShapeCandidateFilter.h  SurfaceDefectProcessor.cpp  SurfaceDefectProcessor.h  SurfaceEdgeStrategy.cpp  SurfaceEdgeStrategy.h  SurfaceModelStrategy.cpp  SurfaceModelStrategy.h  SurfaceModelTrainer.cpp  SurfaceModelTrainer.h  SurfacePcaStrategy.cpp  SurfacePcaStrategy.h  SurfaceProcessingUtils.h  SurfaceThresholdStrategy.cpp  SurfaceThresholdStrategy.h  SurfaceTwoCirclesStrategy.cpp  SurfaceTwoCirclesStrategy.h
src/runtime/: CameraRuntime.cpp  (+2 more)
tools/: vision_help_query.py
translations/: en.json  it.json
vaffanculo/: recipe.json
(+361 files in other folders)
